migrate to new plugin structure (#105)
closes #104

Signed-off-by: Jorge Aguilera <jorge@edn.es>