@@ -1,25 +1,19 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
-
 plugins {
+    id 'io.nextflow.nextflow-plugin' version '1.0.0-beta.6'
     id 'org.antora' version '1.0.0'
 }
 
-repositories {
-    mavenCentral()
+dependencies {
+    implementation "es.edn:nomad-client-java:1.7.6"
+
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
 }
 
-import nextflow.gradle.plugins.NextflowPlugin
-
-apply plugin: NextflowPlugin
-
-nextflowPlugin{
-    githubOrganization = github_organization
-    extensionPoints = [
-    ]
+test {
+    useJUnitPlatform()
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    environment 'NOMAD_ADDR', 'http://test-nf-nomad'
+    environment 'NOMAD_DC', 'dc-test'
 }
 
 node {
@@ -36,4 +30,16 @@ antora {
     ]
     environment = [:]
     packages = [:]
+}
+
+nextflowPlugin {
+    nextflowVersion = '24.10.4'
+
+    provider = 'nextflow-io'
+    className = 'nextflow.nomad.NomadPlugin'
+    extensionPoints = [
+            'nextflow.nomad.executor.NomadExecutor',
+            'nextflow.nomad.secrets.NomadSecretProvider'
+    ]
+
 }
